test/langtools/tools/javac/InterfaceInInner.out
InterfaceInInner.java:12:13: compiler.err.intf.not.allowed.here
1 error
